# haskell-programming-book

./: README.md
chapter10/: foldr-does-not-need-to-traverse-list.hs
chapter11/: chapter11.10-exercises.hs  chapter11.11-exercises.hs  chapter11.12-exercises.hs  chapter11.13.hs  chapter11.14.hs  chapter11.15.hs  chapter11.16.hs  chapter11.17.hs  chapter11.5-exercises.hs  chapter11.6-exercises.hs  chapter11.7-exercises.hs  chapter11.7.hs  chapter11.9-exercises.hs
chapter12/: chapter12.2.hs  chapter12.3.hs  chapter12.4.hs  chapter12.5-exercises.hs
chapter13/hangman/: hangman.cabal
chapter14/: GenTupleIntegral-Int-Integer-Word.hs  chapter14.6-ArbitraryInstances.hs  chapter14.6-CoArbitrary.hs  chapter14.6-Exercises.hs
chapter14/addition/: Addition.hs  addition.cabal
chapter16/: chapter16.4-functors1.hs  chapter16.4-functors2.hs  chapter16.4-functors3.hs  chapter16.4-letsTalkAboutFBaby.hs  chapter16.5-FunctorLaws.hs  chapter16.6-TheGoodTheBadTheUgly.hs
chapter2/: practice.hs
chapter3/: exercises-3.4.hs  print2.hs  print3.hs  topOrLocal.hs
chapter4/: greetIfCool1.hs  greetIfCool2.hs
chapter5/: arith3broken.hs  currying.hs  determineTheType.hs  doesNotCompile.hs  exer-5.4.hs  exer-5.5.hs  exer-5.8.hs  givenTypeWriteFunction.hs  parametric.hs  sectioning.hs  sing.hs  typeInference1.hs  typeInference2.hs  typeKwonDo.hs  writeTypeSignature.hs
chapter6/: add.hs  dayofweek.hs  dividethenadd.hs  doesItTypeCheck.hs  exerEqInstances.hs  givenDataType.hs  identity.hs  inttobool.hs  matchTheTypes.hs  numberish.hs  showExamples.hs  trivial.hs  typeKwonDoTwo.hs
(+42 files in other folders)
