name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/winksaville/haskell-hangman#readme
license:             MIT
license-file:        LICENSE
author:              Wink Saville
maintainer:          wink@saville.com
copyright:           2017 Wink Saville
category:            Example
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
