name:                   addition
version:                0.1.0.0
license:                MIT
license-file:           LICENSE
author:                 Wink Saville
maintainer:             wink@saville.com
category:               Text
build-type:             Simple
cabal-version:          >=1.10

library
  exposed-modules:      Addition
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && <5
                      , hspec
                      , QuickCheck
  hs-source-dirs:       .
  default-language:     Haskell2010
